protofolio Alex, Jamie, Jesse

--- a/portofolio-/Portofolio.html
+++ b/portofolio-/Portofolio.html
@@ -6,7 +6,7 @@
     <title>Sneakers and co</title>
     <link rel="stylesheet" href="/Portefolio/fotoslider.css">
     <link rel="stylesheet" href="/Portefolio/Portofolio.css">
-    <link rel="stylesheet" href="./afb/thump.png">
+    <link rel="stylesheet" href="./afb/thump.jpg" >
 </head>
 <body>
     
