html goed gezet

--- a/Portofolio.html
+++ b/Portofolio.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sneakers and co</title>
-    <link rel="stylesheet" href="/Portefolio/fotoslider.css">
-    <link rel="stylesheet" href="/Portefolio/Portofolio.css">
-    <link rel="stylesheet" href="./afb/thump.jpg" >
+    <link rel="stylesheet" href="fotoslider.css">
+    <link rel="stylesheet" href="Portofolio.css">
+    <link rel="stylesheet" href="thump.jpg" >
 </head>
 <body>
     
 <div id="dashboard">
     <div class="item header">
-        <img src="/Logo (PNG).png" alt="" height="45px">
+        <img src="Logo (PNG) kopie.png" alt="" height="45px">
     </div>
     <div class="item weather">
         <h2>Link</h2>
