--- a/cakekit_AmberZijp/index.html
+++ b/cakekit_AmberZijp/index.html
@@ -8,17 +8,24 @@
     <title>CakeKit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Iceberg&family=Montserrat+Alternates&display=swap" rel="stylesheet">       
-
+    <link href="https://fonts.googleapis.com/css2?family=Iceberg&family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <section id="main">
-        <h1>F2M4 BO - CAKEKIT.NL</h1>
-        <img src="thumb.jpg" alt="Afbeelding van mijn project" />
-        <p>Allemaal interessante informatie over ons project</p>
-        <a href="https://amberrosanne.nl/cakekit" target="_blank">Lees meer</a>
+        
+        <div id="foto">
+            <div id="text">
+                <h1>F2M4 BO - CAKEKIT.NL</h1>
+                <p>Cakekit.nl is het resultaat van mijn school opdracht voor de 4e periode. Op de website is een portfolio met gemaakte taarten, een formulier om een offerte aan te vragen, een over mij pagina en een contact formulier.
+                    <br><br> Wil je meer lezen over de hele opdracht? Klik dan op de knop "lees meer"!
+                </p>
+                <a href="https://amberrosanne.nl/cakekit" target="_blank">Lees meer</a>
+            </div>
+            <img src="thumb.jpg" alt="Afbeelding van mijn project" />
+        </div>
     </section>
 </body>
 
