--- a/poster/index.html
+++ b/poster/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Duckz</title>
+    <title>Duckyz</title>
 </head>
 <body>
 
@@ -22,33 +22,50 @@
 </div>
 <div class="personel">
     <div class="p1">
-        <img class="im1" src="./foto/max.jpg" alt="">
         <h2>Max Bouricius</h2>
         <p>I am Max Bouricius, I am a student at <br> MediaCollege Amsterdam.<br>I am striving to become a fullstack developer<br> and teach myself to become a better and <br> well rounded person.</p>
     </div>
     <div class="p2">
-        <img class="im2" src="./foto/max.jpg" alt="">
-        <h2>Max Bouricius</h2>
-        <p>I am Max Bouricius, I am a student at <br> MediaCollege Amsterdam.<br>I am striving to become a fullstack developer<br> and teach myself to become a better and <br> well rounded person.</p>
+        <h2>Robin Zhao</h2>
+        <p>Hello my name is Robin zhao and I am a student at <br> MediaCollege Amsterdam.<br>I am striving to become a fullstack developer<br> and teach myself to become a better and <br> well rounded person.</p>
     </div>
 </div>
 
 <div class="section">
-        <div>
+        <div class="text1">
           <img src="group.png" alt="">
-          <h2>Value</h2>
-          <p>Value, we have the best prices for this range of quality.</p> 
+          <h2>Doelgroep</h2>
+          <p>Onze website is gericht naar families die in de zomer water speelgoed willen kopen.</p> 
         </div>
-        <div>
+        <div class="text2">
           <img src="settings.png" alt="">
-          <h2>Speed</h2>
-          <p>We use some of the fastest delivery methods in this age, but not only that is fast, we also have a very quick customer service.</p> 
+          <h2>Tools</h2>
+          <p>Wij hebben tijdens het maken van onze website gebruik gemaakt van html/css, javascript, php en wordpress. Ook hebben we een eigen database aangemaakt voor bepaalde items.</p> 
         </div>
-        <div>
+        <div class="text3">
           <img src="comment.png" alt="">
-          <h2>Trust</h2>
-          <p>We build our company on the foundation of trust we strice to be transparent about all our endevours and give out eazy access to any information you might want.</p> 
+          <h2>Feedback</h2>
+          <p>Wij moeten nog onze website wat betere styling geven en responsiveness.</p> 
         </div>
+</div>
+<div class="foto-con">
+    <div class="foto1">
+        <h2>Landingspage</h2>
+        <img src="foto1.jpg" alt="Landingspage" height="540" width="940">
+    </div>
+    <div class="foto2">
+        <h2>Webshop</h2>
+        <img src="foto2.jpg" alt="Webshop" heigth="540" width="940">
+    </div>
+    <div class="foto3">
+        <h2>About page</h2>
+        <img src="foto3.jpg" alt="Webshop" heigth="540" width="940">
+    </div>
+    <div class="foto4">
+        <h2>Contact page</h2>
+        <img src="foto4.jpg" alt="Webshop" heigth="540" width="940">
+    </div>
+
 </div>
        
  
