--- a/zarko/index.html
+++ b/zarko/index.html
@@ -27,8 +27,7 @@
             <div class="col">
                 <h1>Corona Coaching</h1>
                 <p>
-                    Here in this video we will create a travel website header section using HTML and CSS. On this web page we will make a navigation bar with logo, some links and menu icon.
-                    after that there will be 2 columns with some title, text and images. We will also learn to create hover effect on Image.</p>
+                    testestestestestest</p>
                     <button type="button">Explore</button>
             </div>
             <div class="col">
